Finalisation devoir Spring Boot : réservations, DTO, services, tests